<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.newlogic.idpass.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/label_result_details"
                    android:textColor="@color/idpass_orange"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="48dp">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/label_name"
                    android:textColor="@color/newlogic_black"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textSurName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/label_surname"
                    android:textColor="@color/newlogic_black"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/label_birthday"
                    android:textColor="@color/newlogic_black"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/label_nationality"
                    android:textColor="@color/newlogic_black"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/txtImgAction"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/action_show_hide"
                    android:textColor="@color/newlogic_black"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:visibility="gone"
                    android:contentDescription="@string/label_content_description"
                    tools:srcCompat="@tools:sample/avatars" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/txtRawDataAction"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/action_show_hide"
                    android:textColor="@color/newlogic_black"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:focusable="false"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:textSize="14sp"
                    android:visibility="gone"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>